--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,9 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "DM Sans";
 }
 
-
-/*InfoPage.css*/
-/* InfoPage.css */
 .InfoContainer {
   position: relative;
   display: inline-block;
@@ -178,7 +176,7 @@ body {
   }
 
   .AboutImg {
-    width: 350px;
+    width: 300px;
     height: 500px;
     margin-left: 20px;
   }
@@ -207,6 +205,15 @@ body {
     margin-left: 0px;
     font-size: 22px;
   }
+
+}
+@media only screen and (max-width: 350px) {
+  .AboutImg {
+    width: 260px;
+    height: 500px;
+    margin-left: 10px;
+  }
+
 
 }
 
@@ -378,7 +385,6 @@ body {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-/* Adjust the padding to maintain button size */
 .btn-primary {
   color: #fff;
   margin-right: 15px;
@@ -387,7 +393,6 @@ body {
   background-color: #007bff;
   border-color: #007bff;
   padding: 0.375rem 0.75rem;
-  /* Adjust this padding value as needed */
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
 
@@ -396,7 +401,6 @@ body {
 
 
 
-/* PreferenceForm.css */
 .preference-form {
   background-color: #ffffff;
   border-radius: 10px;
@@ -448,7 +452,6 @@ body {
   background-color: #16a085;
 }
 
-/* ProductPage.css */
 .product-page {
   margin: 20px auto;
   max-width: 1200px;
