--- a/src/Assets/Head1.css
+++ b/src/Assets/Head1.css
@@ -1,4 +1,3 @@
-/* Style for the navbar */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -9,20 +8,17 @@
   background-color: rgb(22, 24, 26);
 }
 
-/* Style for the logo */
 .logo {
   cursor: pointer;
   max-width: 50px;
   height: 50px;
 }
 
-/* Style for the right side of the navbar */
 .navbar-right {
   display: flex;
   gap: 20px;
 }
 
-/* Style for navbar items */
 .navbar-item {
   padding: 10px 15px;
   font-size: 16px;
@@ -37,7 +33,6 @@
   transform: scale(1.2);
 }
 
-/* Style for the button */
 .navbar-button {
   padding: 12px 25px;
   background-color: #14a7d8;
@@ -53,12 +48,7 @@
 .navbar-button:hover {
   transform: scale(1.1);
 }
-/* Existing styles */
 
-/* New styles for mobile */
-/* Existing styles */
-
-/* New styles for mobile */
 @media (max-width: 768px) {
   .navbar {
     height: 70px;
@@ -133,4 +123,11 @@
     width: 100%;
     
   }
+}
+
+@media only screen and (max-width: 380px) {
+  .menu-button {
+    margin-left: 250px;
+  }
+
 }
